<resources>
    <string name="app_name">Student</string>
    <string name="label_name">Name: </string>
    <string name="label_class">Class: </string>
    <string name="label_birthday">Birthday: </string>
    <string name="label_birthday_place">Birthday Place: </string>
    <string-array name="arr_brithday_place">
        <item>Ha Noi</item>
        <item>Nam Dinh</item>
        <item>Thai Binh</item>
        <item>Hai Duong</item>
        <item>Ho Chi Minh City</item>
        <item>Da Nang</item>
        <item>Nghe An</item>
        <item>Ha Nam</item>
        <item>Hai Phong</item>
        <item>Quang Ninh</item>
        <item>Lai Chau</item>
        <item>Mai Chau</item>
        <item>Ha Giang</item>
        <item>Ben Tre</item>
        <item>Ninh Binh</item>
        <item>Son La</item>
        <item>Bac Giang</item>
        <item>Tien Giang</item>
        <item>Nha Trang</item>
        <item>Da Lat</item>
    </string-array>
    <string name="label_hobby">Hobby: </string>
    <string name="label_checkbox_book">Book</string>
    <string name="label_checkbox_football">Football</string>
    <string name="label_checkbox_game">Game</string>
    <string name="label_checkbox_music">Music</string>
    <string name="label_radio_button_male">Male</string>
    <string name="label_radio_button_female">Female</string>
    <string name="label_text_view_gender">Gender: </string>
    <string name="label_button_save">Save</string>
</resources>
