<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginLeft="@dimen/linear_layout_margin_left"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/text_view_width"
                android:layout_height="@dimen/text_view_height"
                android:text="@string/label_name"
                android:textColor="@color/colorText"
                />

            <EditText
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="@dimen/edit_text_height" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/linear_layout_margin_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/text_view_width"
                android:layout_height="@dimen/text_view_height"
                android:text="@string/label_class"
                android:textColor="@color/colorText"
                />

            <EditText
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="@dimen/edit_text_height" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/linear_layout_margin_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/text_view_width"
                android:layout_height="@dimen/text_view_height"
                android:text="@string/label_birthday"
                android:textColor="@color/colorText"
                />
            <DatePicker
                android:layout_width="@dimen/date_picker_width"
                android:layout_height="wrap_content">
            </DatePicker>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="@dimen/linear_layout_margin_left"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="@dimen/text_view_birthday_place_width"
                android:layout_height="@dimen/text_view__birthday_place_height"
                android:text="@string/label_birthday_place"
                android:textColor="@color/colorText"
                />
            <Spinner
                android:entries="@array/arr_brithday_place"
                android:layout_marginLeft="@dimen/spinner_marginLeft"
                android:layout_width="@dimen/spinner_width"
                android:layout_height="@dimen/spinner_height">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/linear_layout_margin_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="@dimen/text_view_birthday_place_width"
                android:layout_height="@dimen/text_view__birthday_place_height"
                android:text="@string/label_hobby"
                android:textColor="@color/colorText"
                
                <CheckBox
                    android:text="@string/label_checkbox_book"
                    android:layout_width="@dimen/checkbox_width"
                    android:layout_height="@dimen/checkbox_height" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>


